deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-readiness-gate
  namespace: webhook-demo
  labels:
    app: demo-readiness-gate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-readiness-gate
  template:
    metadata:
      labels:
        app: demo-readiness-gate
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1234
      containers:
        - name: server
          image: stackrox/admission-controller-webhook-demo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
              name: webhook-api
          volumeMounts:
            - name: webhook-tls-certs
              mountPath: /run/secrets/tls
              readOnly: true
      volumes:
        - name: webhook-tls-certs
          secret:
            secretName: webhook-server-tls
---
apiVersion: v1
kind: Service
metadata:
  name: demo-readiness-gate
  namespace: webhook-demo
spec:
  selector:
    app: demo-readiness-gate
  ports:
    - port: 443
      targetPort: webhook-api
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: demo-readiness-gate
webhooks:
  - name: demo-readiness-gate.webhook-demo.svc
    clientConfig:
      service:
        name: demo-readiness-gate
        namespace: webhook-demo
        path: "/mutate-pod-readiness-gate"
      caBundle: ${CA_PEM_B64}
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
