deploy/mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: demo-webhook
webhooks:
  - name: webhook-server.webhook-demo.svc
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUIxRENDQVhxZ0F3SUJBZ0lVVTJwMjB0Q1NRNitnMDFRbXpwanlpcmJwWk5vd0NnWUlLb1pJemowRUF3SXcKU0RFTE1Ba0dBMVVFQmhNQ1ZWTXhDekFKQmdOVkJBZ1RBa05CTVJZd0ZBWURWUVFIRXcxVFlXNGdSbkpoYm1OcApjMk52TVJRd0VnWURWUVFERXd0bGVHRnRjR3hsTG01bGREQWVGdzB4T1RFeE16QXhNalV4TURCYUZ3MHlOREV4Ck1qZ3hNalV4TURCYU1FZ3hDekFKQmdOVkJBWVRBbFZUTVFzd0NRWURWUVFJRXdKRFFURVdNQlFHQTFVRUJ4TU4KVTJGdUlFWnlZVzVqYVhOamJ6RVVNQklHQTFVRUF4TUxaWGhoYlhCc1pTNXVaWFF3V1RBVEJnY3Foa2pPUFFJQgpCZ2dxaGtqT1B [...]
      url: "https://10.10.10.138:443/mutate-pod-readiness-gate"
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
